2005-11-09  Aaron Bockover  <aaron@aaronbock.net>

	* mediaengines/gst/GstPlayerEngine.cs: fixed typo in engine description
	* configure.ac: Add pt_BR to ALL_LINGUAS
	* src/LogCoreViewer.cs: Show both short message and details in viewer
	text entry
	* src/Core.cs: Handle exception from AudioCdCore exception in the case
	where HAL was not able to become initialized; disable AudioCdCore and
	allow Banshee to continue with disabled CD support
	* src/AudioCdCore.cs: marshal native error messages to propagate to 
	exception if HAL could not be initialized
	* src/SourceView.cs: 
	* src/PlayerInterface.cs:
	* src/Core.cs: Only interact with the AudioCdCore if it is available
	* libbanshee/cd-detect.[ch] (cd_detect_new): expects a gchar ** which 
	may be filled with an allocated error message if function returns NULL,
	must be freed if non-null
	* libbanshee/cd-detect.c: Added g_warning calls for potential HAL 
	initialization problems
	* vacuum.sh: Runs make maintainer-clean and then cleans extra junk that
	is left behind, returning to essentially a clean cvs checkout
	* Makefile.am: Made DISTCLEAN a little more standard/correct and moved
	my extra crazy house cleaning to a script, vacuum.sh
	* src/AboutBox.cs: Added Ulas Sahin to authors credits, Marco Carvalho to
	translators credits
	* src/LogCore.cs: LogCore implements IEnumerable; added more helper methods
	for pushing different entry types; subclass LogEntry as WarningLogEntry,
	DebugLogEntry, ErrorLogEntry
	* src/LibraryTransactionManager.cs:
	* src/LibraryTransactions.cs:
	* src/AudioCdCore.cs:
	* src/PipelineProfile.cs:
	* src/Database.cs:
	* src/Core.cs:
	* src/RipTransaction.cs: Use the LogCore for debug logging instead 
	of DebugLog
	* src/DebugLog.cs: Removed 
	* src/Makefile.am: Added LogCoreViewer.cs, Removed DebugLog.cs
	* data/glade/player.glade:
	* src/PlayerInterface.cs: Add menu item for showing the LogCore Viewer
	* src/LogCoreViewer.cs: A dialog for viewing the LogCore entries